# backend

./: .editorconfig  .env.default  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: __main__.py  app.py  aws.py  config.py  models.py  schemas.py
backend/repo/: images.py
backend/views/: images.py  tasks.py  upload.py
