[tool.poetry]
name = "LeadofDigDFO"
version = "0.0.1"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.36"
Flask = "^2.1.2"
urllib3 = "^1.26.9"
boto3 = "^1.23.7"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
